--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "argparse": "^2.0.1",
     "async": "^3.2.3",
     "chalk": "^4.1.2",
+    "heredoc": "^1.3.1",
     "line-reader": "^0.4.0",
     "log-timestamp": "^0.3.0",
-    "prompts": "^2.4.2"
+    "prompts": "^2.4.2",
+    "sprintf-js": "^1.1.2"
   }
 }
