--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,13 +11,13 @@ mirror:
         git tag mirror
         git tag -d mirror
     rules:
-        - if: '$CI_COMMIT_TAG =~ /^/d+\./d+\.\d+$/'
+        - if: $CI_COMMIT_TAG != "mirror"
 
 build:
     image:
         name: node:16-bullseye
     stage: build
-    need:
+    needs:
         job: mirror
     before_script:
         - echo $CI_JOB_ID
@@ -36,13 +36,13 @@ build:
             dotenv: build.env
         expire_in:  100 years
     rules:
-        - if: '$CI_COMMIT_TAG =~ /^/d+\./d+\.\d+$/'
+        - if: $CI_COMMIT_TAG != "mirror"
 
 release:
     stage: release
     image: registry.gitlab.com/gitlab-org/release-cli:latest
     rules:
-        - if: '$CI_COMMIT_TAG =~ /^/d+\./d+\.\d+$/'
+        - if: $CI_COMMIT_TAG != "mirror"
     script:
         - echo "Running release_job"
         - echo "Previous Job ID is printed below"
