--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "pkg ."
   },
   "pkg": {
-    "scripts": "worker.js",
+    "scripts": "worker*.js",
     "targets": [
       "node16-win-x64",
       "node16-linux-x64"
